# rice-leaf-hybrid-cnn_psa

./: .env.example  .gitignore  README.md  check_near_duplicates.py  check_split_duplicates.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_full_experiments.ps1  run_multiseed_final.ps1
configs/: default.yml
configs/data/: rice_leaf_4class.yml
configs/experiments/: E0_baseline_cnn.yml  E1_segmented_cnn.yml  E2_cnn_texture.yml  E3_proposed_segmented_cnn_texture.yml
configs/features/: dwt_only.yml  glcm_dwt.yml  glcm_only.yml
configs/models/: hybrid_mobilenet_texture.yml  mobilenetv2.yml  texture_mlp.yml
configs/preprocessing/: base_resize_norm.yml  lab_otsu_morphology.yml
configs/sweeps/: feature_ablation.yml  learning_rate.yml
data/splits/: all_valid.csv  test.csv  train.csv  val.csv
docker/: Dockerfile  Dockerfile.cpu  README_DOCKER.md  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh
docs/: dataset_description.md  docker_usage.md  environment.md  experiment_protocol.md  methodology.md
logs/: multiseed_summary.csv  pipeline_summary.csv
scripts/: 00_check_environment.py  01_prepare_dataset.py  01b_make_phash_group_split.py  01c_add_split_metadata.py  02_generate_segmented_dataset.py  03_extract_features.py  04_train_experiment.py  05_evaluate_experiment.py  06_compare_experiments.py  07_export_paper_assets.py  08_aggregate_multiseed_results.py  09_export_methodology_facts.py  10_aggregate_confusion_matrices.py
tests/: test_config_loader.py  test_dataset.py  test_features.py  test_models.py  test_segmentation.py
(+81 files in other folders)
